--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-    <display-name>Checklist</display-name>
-    <description>Checklist</description>
+    <display-name>Auction Server</display-name>
+    <description>Auction Server</description>
+    <listener>
+        <description>ServletContextListener</description>
+        <listener-class>servlets.ApplicationListener</listener-class>
+    </listener>
     <context-param>
         <param-name>loginCookieName</param-name>
         <param-value>as_login</param-value>
@@ -14,9 +18,17 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>servlets.LoginServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RegistrationServlet</servlet-name>
+        <servlet-class>servlets.RegistrationServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegistrationServlet</servlet-name>
+        <url-pattern>/register</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
