--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,6 +21,7 @@
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
         <url-pattern>/profile.jsp</url-pattern>
+        <url-pattern>/auction_add.jsp</url-pattern>
         <!--
         Add other url patterns here for LoginFilter.
         Such URLs are only available to logged in users.
@@ -39,6 +40,10 @@
         <servlet-name>ProfileServlet</servlet-name>
         <servlet-class>servlets.ProfileServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AuctionAddServlet</servlet-name>
+        <servlet-class>servlets.AuctionAddServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -50,6 +55,10 @@
     <servlet-mapping>
         <servlet-name>ProfileServlet</servlet-name>
         <url-pattern>/profile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AuctionAddServlet</servlet-name>
+        <url-pattern>/auction_add</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
