--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,6 +22,8 @@
         <filter-name>LoginFilter</filter-name>
         <url-pattern>/profile.jsp</url-pattern>
         <url-pattern>/auction_add.jsp</url-pattern>
+        <url-pattern>/auction_edit.jsp</url-pattern>
+        <url-pattern>/my_auctions.jsp</url-pattern>
         <!--
         Add other url patterns here for LoginFilter.
         Such URLs are only available to logged in users.
