--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,11 +24,7 @@
         <url-pattern>/auction_add.jsp</url-pattern>
         <url-pattern>/auction_edit.jsp</url-pattern>
         <url-pattern>/my_auctions.jsp</url-pattern>
-        <!--
-        Add other url patterns here for LoginFilter.
-        Such URLs are only available to logged in users.
-        <url-pattern>/my_auctions.jsp</url-pattern>
-        -->
+        <url-pattern>/bid_confirm.jsp</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
