--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,7 +4,7 @@
     <description>Auction Server</description>
     <listener>
         <description>ServletContextListener</description>
-        <listener-class>servlets.ApplicationListener</listener-class>
+        <listener-class>listeners.ApplicationListener</listener-class>
     </listener>
     <context-param>
         <param-name>loginCookieName</param-name>
