--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -65,6 +65,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>auctions.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
